# hooligapps_games

./: Makefile  README.md
backend/: app.py  pyproject.toml  test_app.py
backend/models/: submit.py
backend/validators/: submit.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: submit.ts
frontend/src/components/: DataList.tsx  ErrorList.tsx  Spinner.css  Spinner.tsx
frontend/src/pages/: Form.tsx  Home.tsx
